--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">ZhiHu</string>
+    <string name="app_name">知乎</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="menu_share">分享</string>
+    <string name="menu_collect">收藏</string>
+    <string name="menu_comment">评论</string>
+    <string name="menu_follow">点赞</string>
 </resources>
