完成内容的显示

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name="menu_collect">收藏</string>
     <string name="menu_comment">评论</string>
     <string name="menu_follow">点赞</string>
+
+    <string name="action_notification">通知</string>
+    <string name="action_night">夜间模式</string>
+    <string name="action_setting">设置选项</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
